src/test/deca/context/valid/provided/declaration_variable_init.deca
/*/ Description:
//    Declaration variable avec initialisation
//
// Resultats:
// 
// Historique:
//    cree le 01/01/2022*/

{
   int a = 5;
}
