src/test/deca/context/invalid/provided/double_declaration _classe.deca
// Description:
//    Programme ayant le même attribut déclaré deux fois.
//
// Resultats:
//    Ligne 11 : Erreur contextuelle
//
// Historique:
//    cree le 01/01/2022

{
        public class Humain{
        	int age;
        	int age;
        	String nom;
        	String prenom;
        }

}
